@@ -1,32 +1,29 @@
 package com.running_platform.service.impl;
 
 import com.running_platform.dto.request.CreatePostRequest;
+import com.running_platform.dto.response.FeedResponse;
 import com.running_platform.dto.response.PostResponse;
 import com.running_platform.entity.Post.PostImage;
 import com.running_platform.entity.Post.Posts;
-import com.running_platform.entity.RunActivities.RunActivity;
 import com.running_platform.entity.UserAuth.Users;
 import com.running_platform.enums.PostStatus;
-import com.running_platform.enums.UploadFolder;
 import com.running_platform.mapper.PostMapper;
 import com.running_platform.repository.PostImageRepository;
 import com.running_platform.repository.PostRepository;
-import com.running_platform.repository.RunActivityRepository;
 import com.running_platform.repository.UserRepository;
 import com.running_platform.service.CloudinaryService;
 import com.running_platform.service.PostService;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.*;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
-
+import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Base64;
 import java.util.List;
-
-import static org.springframework.data.jpa.domain.AbstractPersistable_.id;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -37,6 +34,7 @@ public class PostServiceImpl implements PostService {
     private final UserRepository userRepository;
     private final CloudinaryService cloudinaryService;
     private final PostImageRepository postImageRepository;
+
     @Override
     @Transactional
     public PostResponse createPost(CreatePostRequest request, Authentication authentication) {
@@ -50,6 +48,8 @@ public class PostServiceImpl implements PostService {
         post.setContent(request.getContent());
         post.setUser(user);
         post.setStatus(PostStatus.PENDING);
+        System.out.println(Instant.now());
+        post.setCreatDate(Instant.now());
 
         if (request.getImages() != null) {
             for (String base64 : request.getImages()) {
@@ -75,12 +75,30 @@ public class PostServiceImpl implements PostService {
         return posts.map(postMapper::toDto);
     }
 
-    @Override
-    public List<PostResponse> findAllApprovePost() {
-        List<Posts> posts = postsRepository.findApprovedPosts();
+    public FeedResponse findAllApprovePost(Long currentUserId, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Slice<PostResponse> postSlice = postsRepository.findApprovedPostsFeed(currentUserId, pageable);
+        List<PostResponse> postList = postSlice.getContent();
 
-        return posts.stream()
-                .map(postMapper::toDto)
-                .toList();
+        if (!postList.isEmpty()) {
+            List<Long> postIds = postList.stream().map(PostResponse::getId).toList();
+
+            List<PostImage> allImages = postImageRepository.findByPostIdIn(postIds);
+
+            Map<Long, List<String>> imagesMap = allImages.stream()
+                    .collect(Collectors.groupingBy(
+                            img -> img.getPost().getId(),
+                            Collectors.mapping(PostImage::getImageUrl, Collectors.toList())
+                    ));
+
+            postList.forEach(post ->
+                    post.setImages(imagesMap.getOrDefault(post.getId(), new ArrayList<>()))
+            );
+        }
+
+        return FeedResponse.builder()
+                .data(postList)
+                .hasNext(postSlice.hasNext())
+                .build();
     }
 }
